--- a/BuildingConstructApi/appsettings.json
+++ b/BuildingConstructApi/appsettings.json
@@ -7,6 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultDB": "Data Source=.;Initial Catalog=BuildingConstruct;User ID=sa;pwd=1",
+    "ThinhDB": "Data Source=ASUSG14\\SQLEXPRESS;Initial Catalog=BuildingConstruct;User ID=swp391;pwd=123"
   },
   "AllowedHosts": "*"
 }
