--- a/Constants/Constants.csproj
+++ b/Constants/Constants.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Gridify.EntityFramework" Version="2.8.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="6.2.23" />
+  </ItemGroup>
+
 </Project>
