--- a/Data/appsettings.json
+++ b/Data/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultDB": "Data Source=.;Initial Catalog=BuildingConstruct;User ID=sa;pwd=1",
     "DucBakeryRecipeDb": "Data Source=MINHDUC;Initial Catalog=BakeryRecipe;User ID=Ducndm;pwd=Anhyeugaulam1*",
-    "ThinhBakeryRecipeDB": "Data Source=ASUSG14\\SQLEXPRESS;Initial Catalog=BakeryRecipe;User ID=swp391;pwd=123",
+    "ThinhDB": "Data Source=ASUSG14\\SQLEXPRESS;Initial Catalog=BuildingConstruct;User ID=swp391;pwd=123",
     "OnlineRecipeDB": "Data Source=bakeryrecipe.database.windows.net;Initial Catalog=BakeryRecipe;User ID=bakeryrecipe;pwd=Admin@123"
   },
   "Tokens": {
