add feature login,register and generate token

--- a/BuildingConstructApi/appsettings.json
+++ b/BuildingConstructApi/appsettings.json
@@ -9,5 +9,10 @@
     "DefaultDB": "Data Source=.;Initial Catalog=BuildingConstruct;User ID=sa;pwd=1",
     "ThinhDB": "Data Source=ASUSG14\\SQLEXPRESS;Initial Catalog=BuildingConstruct;User ID=swp391;pwd=123"
   },
+  "Tokens": {
+    "Key": "0123456789ABCDEF",
+    "Issuer": "https://BuildingConstruct.com.vn"
+
+  },
   "AllowedHosts": "*"
 }
