--- a/Constants/Constants.csproj
+++ b/Constants/Constants.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Gridify.EntityFramework" Version="2.8.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="6.2.23" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
 </Project>
