--- a/BuildingConstructApi/appsettings.json
+++ b/BuildingConstructApi/appsettings.json
@@ -7,7 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultDB": "Data Source=.;Initial Catalog=BuildingConstruct;User ID=sa;pwd=1",
-    "ThinhDB": "Data Source=ASUSG14\\SQLEXPRESS;Initial Catalog=BuildingConstruct;User ID=swp391;pwd=123"
+    "ThinhDB": "Data Source=ASUSG14\\SQLEXPRESS;Initial Catalog=BuildingConstruct;User ID=swp391;pwd=123",
+    "HieuDB": "Data Source=LAPTOP-O8KOB1P9;Initial Catalog=BuildingConstruct;User ID=sa;pwd=123456780"
   },
   "Tokens": {
     "Key": "0123456789ABCDEF",
