add payment and fix create bill

--- a/BuildingConstructApi/appsettings.json
+++ b/BuildingConstructApi/appsettings.json
@@ -17,5 +17,18 @@
     "Issuer": "https://BuildingConstruct.com.vn"
 
   },
+  "Vnpay": {
+    "TmnCode": "6WSJCO21",
+    "HashSecret": "QBUBPCMAOCMIQRGWVKDREFHJIRZAEVAT",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn"
+  },
+  "PaymentCallBack": {
+    "ReturnUrl": "https://localhost:7257/api/VNPay"
+  },
+  "TimeZoneId": "Asia/Bangkok", // If do not us Windown OS change it to: Asia/Bangkok
   "AllowedHosts": "*"
 }
