add Payment method

--- a/BuildingConstructApi/appsettings.json
+++ b/BuildingConstructApi/appsettings.json
@@ -18,8 +18,8 @@
 
   },
   "Vnpay": {
-    "TmnCode": "6WSJCO21",
-    "HashSecret": "QBUBPCMAOCMIQRGWVKDREFHJIRZAEVAT",
+    "TmnCode": "PAZXSAH9",
+    "HashSecret": "RWOMKTXIGPMRCWUCSFASIHRIDFVTNUUY",
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
     "Command": "pay",
     "CurrCode": "VND",
