add docker file

--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -25,4 +25,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
