--- a/Data/appsettings.json
+++ b/Data/appsettings.json
@@ -1,9 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultDB": "Server=sql-server,1433;Initial Catalog=BuildingConstruct;User ID=sa;Password=Hoainam@123;Persist Security Info=True",
-    "DucBakeryRecipeDb": "Data Source=MINHDUC;Initial Catalog=BakeryRecipe;User ID=Ducndm;pwd=Anhyeugaulam1*",
+    "DeployDB": "Server=sql-server,1433;Initial Catalog=BuildingConstruct;User ID=sa;Password=Hoainam@123;Persist Security Info=True",
     "ThinhDB": "Data Source=ASUSG14\\SQLEXPRESS;Initial Catalog=BuildingConstruct;User ID=swp391;pwd=123",
-    "OnlineRecipeDB": "Data Source=bakeryrecipe.database.windows.net;Initial Catalog=BakeryRecipe;User ID=bakeryrecipe;pwd=Admin@123",
+    "DefaultDB": "Data Source=.;Initial Catalog=BuildingConstruct;User ID=sa;pwd=1;MultipleActiveResultSets=true",
     "HieuDB": "Data Source=LAPTOP-O8KOB1P9;Initial Catalog=BuildingConstruct;User ID=sa;pwd=123456780"
   },
   "Tokens": {
