--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,27 +4,43 @@ networks:
     backendnetwork:
 
 services:
-  sql-server:
-    container_name: buildingdb
-    image: "mcr.microsoft.com/mssql/server:2019-latest"
-    ports:
-        - 1455:1433
-    environment:
-        SA_PASSWORD: "Hoainam@123"
-        ACCEPT_EULA: "Y"
-    networks:
+
+    ngnix:
+      volumes:
+        - ./nginx/nginx.conf:/etc/nginx.conf
+      image: nginx:alpine
+      ports:
+      - "443:443"
+      networks:
+      - backendnetwork
+      depends_on:
+        - buildingconstructapi
+
+
+
+
+
+    sql-server:
+        container_name: buildingdb
+        image: "mcr.microsoft.com/mssql/server:2019-latest"
+        ports:
+            - 1433:1433
+        environment:
+            SA_PASSWORD: "Hoainam@123"
+            ACCEPT_EULA: "Y"
+        networks:
         - backendnetwork
 
-  buildingconstructapi:
-    container_name: buildingapi
-    image: ${DOCKER_REGISTRY-}buildingconstructapi
-    build:
-      context: .
-      dockerfile: BuildingConstructApi/Dockerfile
-    ports:
+    buildingconstructapi:
+        container_name: buildingapi
+        image: ${DOCKER_REGISTRY-}buildingconstructapi
+        build:
+            context: .
+            dockerfile: BuildingConstructApi/Dockerfile
+        ports:
         - 8000:80
-    depends_on:
+        depends_on:
         - sql-server
-    networks:
+        networks:
         - backendnetwork
 
