--- a/BuildingConstructApi/appsettings.json
+++ b/BuildingConstructApi/appsettings.json
@@ -9,7 +9,7 @@
 
     "DeployDB": "Server=127.0.0.1,1433;Initial Catalog=BuildingConstruct;User ID=sa;Password=Hoainam@123;Persist Security Info=True",
     "ThinhDB": "Data Source=ASUSG14\\SQLEXPRESS;Initial Catalog=BuildingConstruct;User ID=swp391;pwd=123",
-    "DefaultDB": "Data Source=.;Initial Catalog=BuildingConstruct;User ID=sa;pwd=1;MultipleActiveResultSets=true",
+    "DefaultDB": "Data Source=.;Initial Catalog=BuildingConstruct;User ID=sa;pwd=1",
     "HieuDB": "Data Source=LAPTOP-O8KOB1P9;Initial Catalog=BuildingConstruct;User ID=sa;pwd=123456780"
 
   },
