--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,16 +1,27 @@
-﻿events {}
+﻿
+
+events {}
+
+http{
+
+    upstream web-api {
+        server buildingconstructapi:8000;
+    }
+
 
 server {
-    listen        433;
-    server_name   localhost;
+    listen 80;
+    server_name localhost;
+
     location / {
-        proxy_pass         http://buildingconstructapi:8000;
-        proxy_http_version 1.1;
-        proxy_set_header   Upgrade $http_upgrade;
-        proxy_set_header   Connection keep-alive;
+        proxy_pass         https://127.0.0.1:54077;
+        proxy_redirect     off;
         proxy_set_header   Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_set_header   X-Forwarded-Host $server_name;
+        }
     }
 }
+
+
