--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,10 +11,20 @@ http{
 
 server {
     listen 80;
-    server_name localhost;
+    server_name _;
 
     location / {
-        proxy_pass         https://127.0.0.1:54077;
+        proxy_pass         http://buildingconstructapi:80;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
+
+    location /api/ {
+        proxy_pass         http://buildingconstructapi:80/api/;
         proxy_redirect     off;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
