--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,11 +10,13 @@ http{
 
 
 server {
-    listen 80;
-    server_name _;
+    listen 3000;
+
+    listen [::]:3000;
+    server_name localhost;
 
     location / {
-        proxy_pass         http://buildingconstructapi:80;
+        proxy_pass         http://localhost:8000;
         proxy_redirect     off;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
@@ -24,7 +26,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass         http://buildingconstructapi:80/api/;
+        proxy_pass         http://buildingapi:8000/;
         proxy_redirect     off;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
