--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,10 +54,20 @@ services:
             dockerfile: BuildingConstructApi/Dockerfile
         ports:
         - 8000:80
+        - "80"
+        - "443"
         expose:
         - 8000
         depends_on:
         - sql-server
         networks:
         - backendnetwork
+        environment:
+        - ASPNETCORE_ENVIRONMENT=Development
+        - ASPNETCORE_URLS=https://+:443;http://+:80
+        - ASPNETCORE_Kestrel__Certificates__Default__Password=Hoainam@123
+        - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx   
+        volumes:
+        - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+        - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
 
