--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,11 @@
 ﻿
 
 server {
-    listen 80;
+    listen 80 ssl;
 
     server_name localhost;
+    ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
 
     location / {
         proxy_pass         http://buildingapi:8000;
