--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@
 server {
     listen 80 ssl;
 
-    server_name localhost;
+    server_name localhost.com;
     ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
 
