--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,8 +4,8 @@ server {
     listen 80 ssl;
 
     server_name localhost.com;
-    ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/localhost.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/localhost.com/privkey.pem;
 
     location / {
         proxy_pass         http://buildingapi:8000;
