--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,9 +3,9 @@
 server {
     listen 80 ssl;
 
-    server_name localhost.com;
-    ssl_certificate /etc/letsencrypt/live/localhost.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/localhost.com/privkey.pem;
+    server_name tarebo.click;
+    ssl_certificate /etc/letsencrypt/live/tarebo.click/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tarebo.click/privkey.pem;
 
     location / {
         proxy_pass         http://buildingapi:8000;
