--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,11 +4,11 @@ server {
     listen 80 ssl;
 
     server_name tarebo.click;
-    ssl_certificate /etc/letsencrypt/live/tarebo.click/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/tarebo.click/privkey.pem;
 
     location / {
         proxy_pass         http://buildingapi:8000;
+  	  proxy_ssl_certificate      /etc/letsencrypt/live/tarebo.click/fullchain.pem;
+        proxy_ssl_certificate_key  /etc/letsencrypt/live/tarebo.click/privkey.pem;
         proxy_redirect     off;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
