--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,14 +2,12 @@
 
 server {
     listen 80 ssl;
-
     server_name tarebo.click;
+    ssl_certificate /etc/letsencrypt/live/tarebo.click/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tarebo.click/privkey.pem;
 
     location / {
         proxy_pass         http://buildingapi:8000;
-  	  proxy_ssl_certificate      /etc/letsencrypt/live/tarebo.click/fullchain.pem;
-        proxy_ssl_certificate_key  /etc/letsencrypt/live/tarebo.click/privkey.pem;
-        proxy_redirect     off;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
