--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
         - /path/to/cert:/app/cert
         environment:
           - ASPNETCORE_Kestrel__Certificates__Default__Password=Hoainam@123
-          - ASPNETCORE_Kestrel__Certificates__Default__Path=.aspnet\https\aspnetapp.pfx
+          - ASPNETCORE_Kestrel__Certificates__Default__Path=root\.aspnet\https\aspnetapp.pfx
     nginx:
         build: nginx
         ports:
