--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,10 +62,10 @@ services:
         networks:
         - backendnetwork
         volumes:
-        - /path/to/cert:/app/cert
+        - ~/.aspnet/https:/https:ro
         environment:
           - ASPNETCORE_Kestrel__Certificates__Default__Password=Hoainam@123
-          - ASPNETCORE_Kestrel__Certificates__Default__Path=root\.aspnet\https\aspnetapp.pfx
+          - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
     nginx:
         build: nginx
         ports:
