--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@
 server {
     listen 80 ssl;
     server_name tarebo.click;
-    ssl_certificate /api/privatekey.pem;
+    ssl_certificate /api/privatekey-cert.pem;
     ssl_certificate_key /api/privatekey.pem;
 
     location / {
