--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,8 +3,8 @@
 server {
     listen 80 ssl;
     server_name tarebo.click;
-    ssl_certificate /api/privatekey-cert.pem;
-    ssl_certificate_key /api/privatekey.pem;
+    ssl_certificate api/privatekey-cert.pem;
+    ssl_certificate_key api/privatekey.pem;
 
     location / {
         proxy_pass         http://buildingapi:8000;
