--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,11 +3,11 @@
 server {
     listen 80 ssl;
     server_name tarebo.click;
-    ssl_certificate api/privatekey-cert.pem;
-    ssl_certificate_key api/privatekey.pem;
+    ssl_certificate ~/api/privatekey-cert.pem;
+    ssl_certificate_key ~/api/privatekey.pem;
 
     location / {
-        proxy_pass         http://buildingapi:8000;
+        proxy_pass         https://buildingapi:8000;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
