--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,12 +62,12 @@ services:
         - sql-server
         networks:
         - backendnetwork
-        environment:
-        - ASPNETCORE_ENVIRONMENT=Development
-        - ASPNETCORE_URLS=https://+:443;http://+:80
-        - ASPNETCORE_Kestrel__Certificates__Default__Password=Hoainam@123
-        - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx   
-        volumes:
-        - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
-        - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+        #environment:
+        #- ASPNETCORE_ENVIRONMENT=Development
+        #- ASPNETCORE_URLS=https://+:443;http://+:80
+        #- ASPNETCORE_Kestrel__Certificates__Default__Password=Hoainam@123
+        #- ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx   
+        #volumes:
+        #- ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+        #- ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
 
