--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ server {
     listen 3000;
 
     listen [::]:3000;
-    server_name localhost;
+    server_name tarebo.click;
 
     location / {
         proxy_pass         http://localhost:8000;
@@ -26,7 +26,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass         http://buildingapi:8000/;
+        proxy_pass         http://tarebo.click:8000/;
         proxy_redirect     off;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
