--- a/BuildingConstructApi/Dockerfile
+++ b/BuildingConstructApi/Dockerfile
@@ -8,6 +8,8 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 
+
+
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["BuildingConstructApi/BuildingConstructApi.csproj", "BuildingConstructApi/"]
@@ -22,6 +24,11 @@ RUN dotnet build "BuildingConstructApi.csproj" -c Release -o /app/build
 
 FROM build AS publish
 RUN dotnet publish "BuildingConstructApi.csproj" -c Release -o /app/publish
+
+EXPOSE 8000/tcp
+ENV ASPNETCORE_URLS http://*:8000
+
+
 
 FROM base AS final
 WORKDIR /app
