--- a/BuildingConstructApi/appsettings.json
+++ b/BuildingConstructApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
 
-    "DeployDB": "Server=139.59.115.24,1455;Initial Catalog=BuildingConstruct;User ID=sa;Password=Hoainam@123;Persist Security Info=True;Encrypt = False; TrustServerCertificate = True",
+    "DeployDB": "Server=localhost,1455;Initial Catalog=BuildingConstruct;User ID=sa;Password=Hoainam@123;Persist Security Info=True;Encrypt = False; TrustServerCertificate = True",
     //"DeployDB": "Server=127.0.0.1,1455;Initial Catalog=BuildingConstruct;User ID=sa;Password=Hoainam@123;Persist Security Info=True;Encrypt = False; TrustServerCertificate = True",
     "ThinhDB": "Data Source=ASUSG14\\SQLEXPRESS;Initial Catalog=BuildingConstruct;User ID=swp391;pwd=123",
     "DefaultDB": "Data Source=.;Initial Catalog=BuildingConstruct;User ID=sa;pwd=1;MultipleActiveResultSets=true",
