--- a/BuildingConstructApi/Dockerfile
+++ b/BuildingConstructApi/Dockerfile
@@ -1,27 +1,24 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-
-#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
-#For more information, please see https://aka.ms/containercompat
-
+#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
+EXPOSE 80
+EXPOSE 433
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["BuildingConstructApi/BuildingConstructApi.csproj", "BuildingConstructApi/"]
-COPY ["Constants/Constants.csproj", "Constants/"]
-COPY ["Data/Data.csproj", "Data/"]
 COPY ["BuildingConstructApplication/Application.csproj", "BuildingConstructApplication/"]
 COPY ["ViewModels/ViewModels.csproj", "ViewModels/"]
+COPY ["Data/Data.csproj", "Data/"]
+COPY ["Constants/Constants.csproj", "Constants/"]
 RUN dotnet restore "BuildingConstructApi/BuildingConstructApi.csproj"
 COPY . .
 WORKDIR "/src/BuildingConstructApi"
 RUN dotnet build "BuildingConstructApi.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "BuildingConstructApi.csproj" -c Release -o /app/publish
+RUN dotnet publish "BuildingConstructApi.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
