--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,73 +1,46 @@
 version: '3.4'
 
-networks:
-    backendnetwork:
-        driver: bridge
-
 services:
-    #ngnix:
-    #    image: nginx:stable-alpine
-    #    volumes:
-    #        - ./nginx/nginx.conf:/etc/nginx.conf
-    #    ports:
-    #        - 3000:80
-    #    expose:
-    #     - 3000
-         
-    #    restart: unless-stopped
-    #    depends_on:
-    #        - buildingconstructapi
-    #    networks:
-    #        - backendnetwork
+  buildingconstructapi:
+    image: ${DOCKER_REGISTRY-}buildingconstructapi
+    ports:
+          - "8080:80"
+          #- "8081:433"
+    build:
+      context: .
+      dockerfile: BuildingConstructApi/Dockerfile
+    depends_on:
+          - db
+    networks:
+        - app-network
 
-      #volumes:
-      #  - ./nginx/nginx.conf:/etc/nginx.conf
-
-      #image: nginx:alpine
-      #ports:
-      #- "443:443"
-      ##- "8080:80"
-      ##networks:
-      ##- backendnetwork
-      #depends_on:
-      #  - buildingconstructapi
-
-
-    sql-server:
-        container_name: buildingdb
-        image: "mcr.microsoft.com/mssql/server:2019-latest"
+  db:
+        image: "mcr.microsoft.com/mssql/server:2022-latest"
         ports:
-            - 1455:1433
+          - "1455:1433"
         environment:
-            SA_PASSWORD: "Hoainam@123"
+            SA_PASSWORD: "Admin@123"
             ACCEPT_EULA: "Y"
         networks:
-        - backendnetwork
+            - app-network
 
-    buildingconstructapi:
-        container_name: buildingapi
-        #enviroment:
-        #    - ASPNETCORE_ENVIROMENT=Development
-        image: ${DOCKER_REGISTRY-}buildingconstructapi
-        build:
-            context: .
-            dockerfile: BuildingConstructApi/Dockerfile
-        ports:
-        - 8000:80
-        - "80"
-        - "443"
-        expose:
-        - 8000
-        depends_on:
-        - sql-server
-        networks:
-        - backendnetwork
-        environment:
-        - ASPNETCORE_ENVIRONMENT=Development
-        - ASPNETCORE_URLS=https://+:443;http://+:80
-        - ASPNETCORE_Kestrel__Certificates__Default__Password=Hoainam@123
-        - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx   
-        volumes:
-        - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
-        - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+  #ngnix:
+  #      image: nginx:stable-alpine
+  #      volumes:
+  #          - ./nginx/nginx.conf:/etc/nginx.conf
+  #      ports:
+  #          - 3000:80
+  #      restart: unless-stopped
+  #      depends_on:
+  #          - buildingconstructapi
+  #      networks:
+  #          - app-network
+
+
+networks:
+    app-network :
+        driver: bridge
+
+
+
 
