--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,39 +1,10 @@
-﻿
+﻿server {
+    listen 3000 ;
 
-events {}
-
-http{
-
-    upstream web-api {
-        server buildingconstructapi:8000;
-    }
-
-
-server {
-    listen 3000;
-
-    listen [::]:3000;
-    server_name localhost;
-
-    location / {
-        proxy_pass         http://localhost:8000;
-        proxy_redirect     off;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Host $server_name;
-        }
-    }
-
-    location /api/ {
-        proxy_pass         http://buildingapi:8000/;
-        proxy_redirect     off;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Host $server_name;
-        }
+    location /api {
+        proxy_pass http://buildingconstructapi:49177/api;
+        proxy_set_header  X-Real-IP $remote_addr;
+        proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header  Host $http_host;
     }
 }
-
-
