--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,7 +4,7 @@ services:
   buildingconstructapi:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
-    ports:
-      - "80"
-      - "443"
+      # - ASPNETCORE_URLS=https://+:443;http://+:80
+      # ports:
+      #   - "80"
+      #   - "443"
