--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,11 @@
-﻿server {
-    listen 3000 ;
-
-    location /api {
-        proxy_pass http://buildingconstructapi:8080/api;
-        proxy_set_header  X-Real-IP $remote_addr;
-        proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header  Host $http_host;
-    }
+﻿events {
+    worker_connections 1000;
 }
-
+http {
+  server {
+    listen 8080;
+    location / {
+      proxy_pass http://buildingconstructapi:5000;
+    }
+  }
+}
