--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
         ports:
           - "1455:1433"
         environment:
-            MSSQL_SA_PASSWORD: Hoainam@123
+            SA_PASSWORD: Hoainam@123
             ACCEPT_EULA: "Y"
         networks:
             - app-network
