--- a/BuildingConstructApi/appsettings.json
+++ b/BuildingConstructApi/appsettings.json
@@ -8,7 +8,7 @@
   "ConnectionStrings": {
 
     //"DeployDB": "Server=tcp:db;Initial Catalog=BuildingConstruct;User ID=sa;Password=Hoainam@123;Trusted_Connection=False; MultipleActiveResultSets=true; Integrated Security=False;",
-    "DeployDB": "Server=159.65.7.165;Initial Catalog=BuildingConstruct;User ID=sa;Password=Hoainam@123;Persist Security Info=True;Encrypt = False; TrustServerCertificate = True",
+    "DeployDB": "Server=tcp:159.65.7.165;Initial Catalog=BuildingConstruct;User ID=sa;Password=Hoainam@123;Persist Security Info=True;Encrypt = False; TrustServerCertificate = True",
     //"DeployDB": "Server=127.0.0.1,1455;Initial Catalog=BuildingConstruct;User ID=sa;Password=Admin@123;Persist Security Info=True;Encrypt = False; TrustServerCertificate = True",
     "ThinhDB": "Data Source=ASUSG14\\SQLEXPRESS;Initial Catalog=BuildingConstruct;User ID=swp391;pwd=123",
     "DefaultDB": "Data Source=.;Initial Catalog=BuildingConstruct;User ID=sa;pwd=1",
