--- a/Data/appsettings.json
+++ b/Data/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DeployDB": "Server=tcp:sql-server;Initial Catalog=BuildingConstruct;User ID=sa;Password=Hoainam@123;Persist Security Info=True;Encrypt = False; TrustServerCertificate = True",
+    "DeployDB": "Server=159.65.7.165,1433;Initial Catalog=BuildingConstruct;User ID=sa;Password=Hoainam@123;Persist Security Info=True;Encrypt = False; TrustServerCertificate = True",
     "ThinhDB": "Data Source=ASUSG14\\SQLEXPRESS;Initial Catalog=BuildingConstruct;User ID=swp391;pwd=123",
     "DefaultDB": "Data Source=.;Initial Catalog=BuildingConstruct;User ID=sa;pwd=1;MultipleActiveResultSets=true",
     "HieuDB": "Data Source=LAPTOP-O8KOB1P9;Initial Catalog=BuildingConstruct;User ID=sa;pwd=123456780"
