--- a/BuildingConstructApi/Properties/launchSettings.json
+++ b/BuildingConstructApi/Properties/launchSettings.json
@@ -30,6 +30,9 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true,
       "useSSL": true
