--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,10 @@ services:
     build:
       context: .
       dockerfile: BuildingConstructApi/Dockerfile
-    #depends_on:
-    #      - db
+      args:
+        - ASPNETCORE_ENVIRONMENT=Development
+    volumes:
+      - ./appsettings.Development.json:/app/appsettings.Development.json:ro
     networks:
         - app-network
   #db:
