--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,41 +33,17 @@ services:
       #  - buildingconstructapi
 
 
-    sql-server:
-        container_name: buildingdb
-        image: "mcr.microsoft.com/mssql/server:2019-latest"
-        ports:
-            - 1455:1433
-        environment:
-            SA_PASSWORD: "Hoainam@123"
-            ACCEPT_EULA: "Y"
-        networks:
-        - backendnetwork
-
     buildingconstructapi:
-        container_name: buildingapi
-        #enviroment:
-        #    - ASPNETCORE_ENVIROMENT=Development
         image: ${DOCKER_REGISTRY-}buildingconstructapi
-        build:
-            context: .
-            dockerfile: BuildingConstructApi/Dockerfile
         ports:
-        - 8000:80
-        - "80"
-        - "443"
-        expose:
-        - 8000
-        depends_on:
-        - sql-server
-        networks:
-        - backendnetwork
+          - "5000:5000"
+        build:
+          context: .
+          dockerfile: BuildingConstructApi/Dockerfile
         environment:
-        - ASPNETCORE_ENVIRONMENT=Development
-        - ASPNETCORE_URLS=https://+:443;http://+:80
-        - ASPNETCORE_Kestrel__Certificates__Default__Password=Hoainam@123
-        - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx   
+          ASPNETCORE_ENVIRONMENT: Development
         volumes:
-        - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
-        - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+          - ./appsettings.Development.json:/app/appsettings.Development.json
+        networks:
+            - app-network
 
