--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,23 @@
-﻿events {
-    worker_connections 1000;
+﻿http {
+    upstream web-api {
+    server buildingconstructapi:5000;
 }
-http {
-  server {
-    listen 8080;
-    location / {
-      proxy_pass http://buildingconstructapi:5000;
+
+    server{
+        listen 80;
+        server_name tarebo.click www.tarebo.click;
+
+        location / {
+        proxy_pass         http://web-api;
+        proxy_http_version 1.1;
+        proxy_set_header   Upgrade $http_upgrade;
+        proxy_set_header   Connection keep-alive;
+        proxy_set_header   Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
     }
-  }
+    }
+
+
 }
