--- a/BuildingConstructApi/Dockerfile
+++ b/BuildingConstructApi/Dockerfile
@@ -3,8 +3,10 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 5000
+EXPOSE 80
+EXPOSE 443
 
-ENV ASPNETCORE_URLS=https://+:5000
+#ENV ASPNETCORE_URLS=https://+:5000
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
