--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,14 @@ services:
   buildingconstructapi:
     image: ${DOCKER_REGISTRY-}buildingconstructapi
     ports:
-      - "5000:80"
-      - "5001:443"
+      - "5000:5000"
+      #- "5001:443"
     build:
       context: .
       dockerfile: BuildingConstructApi/Dockerfile
     environment:
       ASPNETCORE_ENVIRONMENT: Development
-      ASPNETCORE_URLS: https://+:443;http://+:80
+      #ASPNETCORE_URLS: https://+:443;http://+:80
     volumes:
       - ./appsettings.Development.json:/app/appsettings.Development.json
     #volumes:
