--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: '3.4'
 
 services:
   buildingconstructapi:
-    #image: ${DOCKER_REGISTRY-}buildingconstructapi
-    image: "$${docker_registry-}buildingconstructapi"
+    image: ${DOCKER_REGISTRY-}buildingconstructapi
     ports:
       - "5000:5000"
       #- "5001:443"
