--- a/BuildingConstructApi/Dockerfile
+++ b/BuildingConstructApi/Dockerfile
@@ -2,8 +2,8 @@
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+ENV ASPNETCORE_URLS http://+:5000
+EXPOSE 5000
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
@@ -19,6 +19,9 @@ RUN dotnet build "BuildingConstructApi.csproj" -c Release -o /app/build
 
 FROM build AS publish
 RUN dotnet publish "BuildingConstructApi.csproj" -c Release -o /app/publish
+
+FROM nginx
+COPY nginx.conf/etc/nginx/nginx.conf
 
 FROM base AS final
 WORKDIR /app
