--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,17 +35,26 @@ services:
 
     buildingconstructapi:
         image: ${DOCKER_REGISTRY-}buildingconstructapi
-        ports:
-          - "5000:80"
-          - "5001:443"
+        expose:
+          - "5000"
         build:
           context: .
           dockerfile: BuildingConstructApi/Dockerfile
         environment:
         - ASPNETCORE_ENVIRONMENT=Development
-        - ASPNETCORE_URLS=https://+:443;http://+:80
         volumes:
-          - ./appsettings.Development.json:/app/appsettings.Development.json
+         - ./appsettings.Development.json:/app/appsettings.Development.json
         networks:
-            - backendnetwork
+        - backendnetwork
+    proxy:
+        build:
+            context:  ./nginx
+            dockerfile: Dockerfile
+        ports:
+            - "80:80"
+            - "443:443"
+        volumes:
+             - /etc/letsencrypt/:/etc/letsencrypt/
+        links:
+            - buildingconstructapi
 
