--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,39 +1,32 @@
-﻿
+﻿worker_processes 4;
 
-events {}
+events { worker_connections 1024; }
 
-http{
+http {
+    sendfile on;
 
-    upstream web-api {
-        server buildingconstructapi:8000;
+    upstream app_servers {
+        server web:5000;
+    }
+    server {
+        listen 80 default_server;
+        listen [::]:80 default_server;
+        server_name tarebo.click www.tarebo.click;
+        return 301 https://www.$server_name$request_uri;
     }
 
+    server {
+        listen 443 ssl;
+        ssl_certificate /etc/letsencrypt/live/tarebo.click/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tarebo.click/privkey.pem;
 
-server {
-    listen 3000;
-
-    listen [::]:3000;
-    server_name localhost;
-
-    location / {
-        proxy_pass         http://localhost:8000;
-        proxy_redirect     off;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Host $server_name;
-        }
+        location / {
+            proxy_pass         http://app_servers;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+   }
     }
-
-    location /api/ {
-        proxy_pass         http://buildingapi:8000/;
-        proxy_redirect     off;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Host $server_name;
-        }
-    }
-}
-
-
+}     
