--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,25 @@
     "DefaultDB": "Data Source=.;Initial Catalog=BuildingConstruct;User ID=sa;pwd=1",
     "HieuDB": "Data Source=LAPTOP-O8KOB1P9;Initial Catalog=BuildingConstruct;User ID=sa;pwd=123456780"
   },
+  "Tokens": {
+    "Key": "0123456789ABCDEF",
+    "Issuer": "https://BakeryRecipe.com.vn"
+
+  },
+  "Vnpay": {
+    "TmnCode": "PAZXSAH9",
+    "HashSecret": "RWOMKTXIGPMRCWUCSFASIHRIDFVTNUUY",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn"
+  },
+  "PaymentCallBack": {
+    "ReturnUrl": "https://buildingconstruct.space/api/VNPay"
+  },
+  "TimeZoneId": "Asia/Bangkok", // If do not us Windown OS change it to: Asia/Bangkok
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
