--- a/BuildingConstructApi/Properties/launchSettings.json
+++ b/BuildingConstructApi/Properties/launchSettings.json
@@ -30,6 +30,7 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
+      "anonymousAuthentication": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true,
       "useSSL": true
