--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "Tokens": {
     "Key": "0123456789ABCDEF",
-    "Issuer": "https://BakeryRecipe.com.vn"
+    "Issuer": "https://BuildingConstruct.com.vn"
 
   },
   "Vnpay": {
