--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -21,7 +21,7 @@
     "Locale": "vn"
   },
   "PaymentCallBack": {
-    "ReturnUrl": "https://buildingconstruct.space/api/VNPay"
+    "ReturnUrl": "https://buildingconstruct.click/api/VNPay"
   },
   "TimeZoneId": "Asia/Bangkok", // If do not us Windown OS change it to: Asia/Bangkok
   "AllowedHosts": "*",
